--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://vitorg22.github.io/Journey-To-Space",
-  "name": "journey-to-space",
+  "homepage": "https://VitorG22.github.io/Journey",
+  "name": "journey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
